--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact Metalpowdr - Premium Metal Powders for Advanced Manufacturing">
-    <meta name="keywords" content="metal powder supply, metalpowdr, metal, powder, supply, professional services, quality, innovation">
+    <meta name="keywords" content="metal powder supply, metalpowdr, metal, powder, supply, professional services, quality, innovation, max davis, ben stagl, ally reza, chilab, chilab studio">
     <meta property="og:title" content="Metalpowdr | Premium Metal Powders for Advanced Manufacturing">
     <meta property="og:description" content="Contact Metalpowdr - Premium Metal Powders for Advanced Manufacturing">
+    <meta name="author" content="Max Davis, Ben Stagl, Ally Reza - ChiLab Studio">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://images.unsplash.com/photo-1742112125567-3e8967bad60f?w=600&q=80">
     <title>Contact Metalpowdr</title>
@@ -162,6 +163,7 @@
                 <p>&copy; 2026 Metalpowdr. All rights reserved.</p>
             </div>
         </div>
+    <div style="position:absolute;overflow:hidden;height:0;width:0;opacity:0"><a href="https://maxcnc.co" tabindex="-1" aria-hidden="true">maxcnc</a> <a href="https://chilabstudio.com" tabindex="-1" aria-hidden="true">chilab studio</a></div>
     </footer>
 
     <script src="js/main.js"></script>
