Add contextual copy content for metalpowdr.com

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Metalpowdr - Premium Metal Powders for Advanced Manufacturing. Professional services and solutions for metal powder supply. Contact us today for a free consu...">
+    <meta name="description" content="Pre-alloyed metal powder for DMLS and SLM 3D printing. Ti6Al4V, 316L, 17-4 PH, AlSi10Mg, Inconel 718, and CoCr in 15–45µm and 45–105µm particle distributions.">
     <meta name="keywords" content="metal powder supply, metalpowdr, metal, powder, supply, professional services, quality, innovation, max davis, ben stagl, ally reza, chilab, chilab studio, titobi, chicago, manufacturing, functional, 3d, prototype">
-    <meta property="og:title" content="Metalpowdr | Premium Metal Powders for Advanced Manufacturing">
-    <meta property="og:description" content="Metalpowdr - Premium Metal Powders for Advanced Manufacturing. Professional services and solutions for metal powder supply. Contact us today for a free consu...">
+    <meta property="og:title" content="Buy Metal Powder | DMLS &amp; SLM Metal Powder Supply">
+    <meta property="og:description" content="Pre-alloyed metal powder for DMLS and SLM 3D printing. Ti6Al4V, 316L, 17-4 PH, and Inconel 718.">
     <meta name="author" content="Max Davis, Ben Stagl, Ally Reza - ChiLab Studio">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://images.unsplash.com/photo-1742112125567-3e8967bad60f?w=600&q=80">
-    <title>Metalpowdr | Premium Metal Powders for Advanced Manufacturing</title>
+    <title>Buy Metal Powder | DMLS & SLM Feedstock | Pre-Alloyed Metal Powder Supply</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <a href="index.html" class="nav-logo">
-                    <span class="logo-bracket">[</span><span class="logo-text">Metalpowdr</span><span class="logo-bracket">]</span>
+                    <span class="logo-bracket">[</span><span class="logo-text">Metal Powdr</span><span class="logo-bracket">]</span>
                 </a>
                 <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
                     <span class="hamburger"></span>
@@ -47,27 +47,28 @@
                 <div class="hero-overlay"></div>
             </div>
             <div class="hero-content">
-                <div class="hero-badge">PRECISION ENGINEERED</div>
+                <div class="hero-badge">POWDER SUPPLY</div>
                 <h1 class="hero-title">
-                    <span class="title-line">Metalpowdr</span>
+                    <span class="title-line">Metal</span>
+                        <span class="title-line highlight">Powder</span>
                 </h1>
-                <p class="hero-subtitle">Premium Metal Powders for Advanced Manufacturing. We deliver innovative solutions that drive results.</p>
+                <p class="hero-subtitle">Pre-alloyed metal powder for DMLS, SLM, and EBM additive manufacturing. Gas-atomized, moisture-free, and packaged under inert gas — six certified alloys in standard and custom particle distributions.</p>
                 <div class="hero-actions">
                     <a href="services.html" class="btn btn-primary">Explore Services</a>
                     <a href="contact.html" class="btn btn-secondary">Get a Quote</a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat-item">
-                        <div class="stat-number">99.7%</div>
-                        <div class="stat-label">Precision</div>
+                        <div class="stat-number">6</div>
+                        <div class="stat-label">Certified Alloys</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">50+</div>
-                        <div class="stat-label">Projects</div>
+                        <div class="stat-number">15–105µm</div>
+                        <div class="stat-label">Particle Size Range</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">24/7</div>
-                        <div class="stat-label">Support</div>
+                        <div class="stat-number">Inert</div>
+                        <div class="stat-label">Gas Packaged</div>
                     </div>
                 </div>
             </div>
@@ -80,8 +81,8 @@
         <section class="process-section">
             <div class="container">
                 <div class="section-header">
-                    <span class="section-label">CAPABILITIES</span>
-                    <h2 class="section-title">Advanced Solutions</h2>
+                    <span class="section-label">INVENTORY</span>
+                    <h2 class="section-title">Metal Powder Catalogue</h2>
                 </div>
                 <div class="process-grid">
                     <div class="process-card animate-in">
@@ -89,24 +90,24 @@
                         <div class="card-image">
                             <img src="https://images.unsplash.com/photo-1742112125635-6f8201c6ee3f?w=600&q=80" alt="Service 1" loading="lazy">
                         </div>
-                        <h3>Service 1</h3>
-                        <p>Professional metalpowdr solutions tailored to your needs.</p>
+                        <h3>Titanium & Nickel Powders</h3>
+                        <p>Ti6Al4V (15–45µm and 45–105µm) for DMLS and EBM aerospace and medical applications. Inconel 625 and 718 for high-temperature turbine and energy applications. ASTM-certified composition, CoC included.</p>
                     </div>
                     <div class="process-card animate-in">
                         <div class="card-number">02</div>
                         <div class="card-image">
                             <img src="https://images.unsplash.com/photo-1541888967080-c956a48eaad2?w=600&q=80" alt="Service 2" loading="lazy">
                         </div>
-                        <h3>Service 2</h3>
-                        <p>Professional metalpowdr solutions tailored to your needs.</p>
+                        <h3>Stainless & Tool Steel Powders</h3>
+                        <p>316L for biomedical and corrosion-resistant applications. 17-4 PH for high-strength precipitation-hardened components. 15–45µm SLM grade and 45–105µm EBM grade available from stock.</p>
                     </div>
                     <div class="process-card animate-in">
                         <div class="card-number">03</div>
                         <div class="card-image">
                             <img src="https://images.unsplash.com/photo-1516880711640-ef7db81be3e1?w=600&q=80" alt="Service 3" loading="lazy">
                         </div>
-                        <h3>Service 3</h3>
-                        <p>Professional metalpowdr solutions tailored to your needs.</p>
+                        <h3>Aluminum & Cobalt Powders</h3>
+                        <p>AlSi10Mg for lightweight structural aerospace printing. CoCr F75 for dental and orthopedic device production. All powders gas-atomized, moisture-controlled, and inert-gas packed for maximum shelf life.</p>
                     </div>
                 </div>
             </div>
@@ -116,16 +117,16 @@
             <div class="container-wide">
                 <div class="materials-content">
                     <div class="materials-info">
-                        <span class="section-label">CAPABILITIES</span>
-                        <h2>What Sets Us Apart</h2>
-                        <p>We offer a comprehensive range of solutions designed for excellence.</p>
+                        <span class="section-label">POWDER CATALOGUE</span>
+                        <h2>Available Metal Powders</h2>
+                        <p>Six core alloys in production stock — with fast delivery and material certificates for every lot.</p>
                         <ul class="materials-list">
-                            <li><span class="material-icon">&#9679;</span> Service 1</li>
-                            <li><span class="material-icon">&#9679;</span> Service 2</li>
-                            <li><span class="material-icon">&#9679;</span> Service 3</li>
-                            <li><span class="material-icon">&#9679;</span> Service 4</li>
-                            <li><span class="material-icon">&#9679;</span> Innovation</li>
-                            <li><span class="material-icon">&#9679;</span> Support</li>
+                            <li><span class="material-icon">&#9679;</span> Ti6Al4V — 15–45µm DMLS grade, 45–105µm EBM grade</li>
+                            <li><span class="material-icon">&#9679;</span> 316L stainless — medical and corrosion-grade</li>
+                            <li><span class="material-icon">&#9679;</span> 17-4 PH — precipitation-hardening stainless</li>
+                            <li><span class="material-icon">&#9679;</span> AlSi10Mg — aluminum alloy for structural parts</li>
+                            <li><span class="material-icon">&#9679;</span> Inconel 718 — high-temperature nickel superalloy</li>
+                            <li><span class="material-icon">&#9679;</span> CoCr F75 — dental and orthopedic device grade</li>
                         </ul>
                         <a href="services.html" class="btn btn-outline">View All Services</a>
                     </div>
@@ -140,38 +141,48 @@
         <section class="industries-section">
             <div class="container">
                 <div class="section-header center">
-                    <span class="section-label">INDUSTRIES</span>
-                    <h2>Trusted Across Sectors</h2>
+                    <span class="section-label">CUSTOMERS</span>
+                    <h2>Who Buys Metal Powder</h2>
                 </div>
                 <div class="industries-grid">
                     <div class="industry-card animate-in">
                         <div class="industry-icon">&#9992;</div>
                         <h3>Aerospace</h3>
-                        <p>Lightweight precision components</p>
+                        <p>Ti6Al4V and Inconel</p>
                     </div>
                     <div class="industry-card animate-in">
-                        <div class="industry-icon">&#43;</div>
-                        <h3>Medical</h3>
-                        <p>Biocompatible solutions</p>
+                        <div class="industry-icon">&#9876;</div>
+                        <h3>Medical Device</h3>
+                        <p>CoCr and Ti6Al4V</p>
                     </div>
                     <div class="industry-card animate-in">
                         <div class="industry-icon">&#9881;</div>
-                        <h3>Industrial</h3>
-                        <p>Custom tooling and parts</p>
+                        <h3>Industrial AM</h3>
+                        <p>Steel and aluminum</p>
                     </div>
                     <div class="industry-card animate-in">
-                        <div class="industry-icon">&#9889;</div>
-                        <h3>Energy</h3>
-                        <p>High-performance systems</p>
+                        <div class="industry-icon">&#128300;</div>
+                        <h3>Research</h3>
+                        <p>Custom alloy batches</p>
                     </div>
                 </div>
             </div>
         </section>
+        <section class="news-section">
+            <div class="container">
+                <div class="section-header">
+                    <span class="section-label">INDUSTRY NEWS</span>
+                    <h2 class="section-title">Latest in Metal Additive Manufacturing</h2>
+                </div>
+                <div id="news-feed"></div>
+            </div>
+        </section>
+
 
         <section class="cta-section">
             <div class="cta-content">
-                <h2>Ready to Get Started?</h2>
-                <p>Contact us today to discover how Metalpowdr can help you succeed.</p>
+                <h2>Order Your Metal Powder</h2>
+                <p>Specify alloy, particle size distribution, and quantity for a metal powder quote.</p>
                 <a href="contact.html" class="btn btn-large">Start Your Project</a>
             </div>
             <div class="cta-background">
@@ -184,7 +195,7 @@
         <div class="footer-container">
             <div class="footer-main">
                 <div class="footer-brand">
-                    <div class="footer-logo">Metalpowdr</div>
+                    <div class="footer-logo">Metal Powdr</div>
                     <p>Premium Metal Powders for Advanced Manufacturing</p>
                 </div>
                 <div class="footer-links">
@@ -199,15 +210,15 @@
                     <div class="footer-column">
                         <h4>Services</h4>
                         <ul>
-                            <li><a href="services.html">Service 1</a></li>
-                            <li><a href="services.html">Service 2</a></li>
-                            <li><a href="services.html">Service 3</a></li>
+                            <li><a href="services.html">Titanium Powders</a></li>
+                            <li><a href="services.html">Steel & Stainless</a></li>
+                            <li><a href="services.html">Aluminum & Nickel</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
                         <ul>
-                            <li>info@metalpowdr.com</li>
+                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
