--- a/about.html
+++ b/about.html
@@ -168,15 +168,15 @@
                     <div class="footer-column">
                         <h4>Services</h4>
                         <ul>
-                            <li><a href="services.html">Service 1</a></li>
-                            <li><a href="services.html">Service 2</a></li>
-                            <li><a href="services.html">Service 3</a></li>
+                            <li><a href="services.html">Titanium Powders</a></li>
+                            <li><a href="services.html">Steel & Stainless</a></li>
+                            <li><a href="services.html">Aluminum & Nickel</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
                         <ul>
-                            <li>info@metalpowdr.com</li>
+                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
